--- a/client/styles.scss
+++ b/client/styles.scss
@@ -2,6 +2,14 @@ body {
   margin: 0;
   padding: 0;
 }
+.label{
+  margin-right: 4px;
+}
+.input{
+  border-radius: 5px;
+  width: 250px;
+  height: 30px
+}
 h1 {
   text-align: center;
 }
